k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: bottalk
  labels:
    app.kubernetes.io/part-of: bottalk
